php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35422 strtotime() does not parse times with UTC as timezone
Submitted: 2005-11-27 10:11 UTC Modified: 2005-11-29 00:49 UTC
From: HyneeHoadley at Hotmail dot com Assigned: derick (profile)
Status: Closed Package: Date/time related
PHP Version: 5.1.0 OS: Windows XP
Private report: No CVE-ID: None
 [2005-11-27 10:11 UTC] HyneeHoadley at Hotmail dot com
Description:
------------
strtotime() used to accept dates with the format 'July 1, 2000 00:00:00 UTC', but now produces NULL or empty output.

Reproduce code:
---------------
<?php

$gmt_time = strtotime('July 1, 2000 00:00:00 GMT');

$utc_time = strtotime('July 1, 2000 00:00:00 UTC');

echo "$gmt_time\n";
echo "$utc_time\n";

print_r($utc_time);

?>

Expected result:
----------------
962409600
962409600
962409600

Actual result:
--------------
962409600



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-27 14:02 UTC] tony2001@php.net
Assigned to the author.
 [2005-11-29 00:49 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 08:00:01 2026 UTC