Fixed bug #35422 (strtotime() does not parse times with UTC as timezone).